# data-cleaning-env

./: .gitignore  Dockerfile  README.md  debug_sql.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  validate.sh
app/: main.py
data/: generator.py
env/: environment.py
graders/: base.py  fix_grader.py  hard.py  label_grader.py  pipeline_grader.py
models/: core.py
server/: app.py
tasks/: base.py  easy.py  hard.py  medium.py
tests/: test_agent.py
