[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "data-cleaning-env"
version = "0.1.0"
description = "A data cleaning environment for the OpenEnv Assessment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pandas",
    "duckdb",
    "pydantic",
    "numpy",
    "requests",
    "openenv",
    "openai",
    "httpx"
]

[project.scripts]
server = "server.app:main"
